--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,7 @@
   text-align: center;
   display: block;
 }
-img {
-  border-radius: 8px;
-  width: 150px;
-  height: auto;
-  opacity: 1;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+
 .email-link {
   display: flex;
   justify-content: center;
@@ -57,6 +49,48 @@ img {
   font-family: "Smooch", cursive;
 }
 .hero {
-  padding: 150px 15px;
+  padding: 120px 15px;
   background: #e7eaf6;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 200px;
+  height: 250px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: transparent;
+}
+
+.flip-card-back {
+  background-color: transparent;
+  color: #212529;
+  transform: rotateY(180deg);
+  font-family: "Smooch", cursive;
 }
