--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,11 @@
   font-family: "Smooch", cursive;
 }
 .hero {
-  padding: 120px 15px;
   background: #e7eaf6;
 }
 
 .flip-card {
-  background-color: transparent;
+  background-color: #e7eaf6;
   width: 200px;
   height: 250px;
   display: block;
@@ -63,13 +62,10 @@
 }
 
 .flip-card-inner {
-  position: relative;
   width: 100%;
   height: 100%;
-  text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .flip-card:hover .flip-card-inner {
@@ -84,13 +80,8 @@
   backface-visibility: hidden;
 }
 
-.flip-card-front {
-  background-color: transparent;
-}
-
 .flip-card-back {
-  background-color: transparent;
+  background-color: #e7eaf6;
   color: #212529;
   transform: rotateY(180deg);
-  font-family: "Smooch", cursive;
 }
