--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@
 
 .navigation-links {
   display: flex;
-  margin-top: 40px;
+  margin-top: 80px;
   justify-content: center;
 }
 
 .navigation-links a {
-  margin: 20px;
+  margin: 25px;
   border-radius: 4px;
   padding: 20px 15px;
   text-decoration: none;
@@ -39,7 +39,7 @@
   display: flex;
   justify-content: center;
   color: var(--primary-color);
-  font-size: 28px;
+  font-size: 27px;
   text-decoration: none;
 }
 .email-link:hover {
@@ -51,10 +51,13 @@
 .hero {
   background: #e7eaf6;
 }
+img {
+  border-radius: 50%;
+}
 
 .flip-card {
-  width: 200px;
-  height: 250px;
+  width: 100px;
+  height: 150px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -72,8 +75,6 @@
 .flip-card-front,
 .flip-card-back {
   position: absolute;
-  width: 100%;
-  height: 100%;
   backface-visibility: hidden;
 }
 
