--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-body {
-  background: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
-}
-
 :root {
   --primary-color: #7fa99b;
   --secondary-color: #fdc57b;
@@ -57,7 +53,7 @@ body {
 }
 
 .btn-branding-outline {
-  background-color: var(--primary-color);
+  background-color: #394a51;
   margin: 25px;
   border-radius: 4px;
   padding: 15px 30px;
